--- a/Yao_QC_learning/LS_EDF_QC/learning and share/Intro.ipynb
+++ b/Yao_QC_learning/LS_EDF_QC/learning and share/Intro.ipynb
@@ -105,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "\"0000000000000101\""
+       "\"0010001111111101\""
       ]
      },
      "execution_count": 6,
@@ -114,7 +114,7 @@
     }
    ],
    "source": [
-    "bitstring(Int16(5))"
+    "bitstring(Int16(9213))"
    ]
   },
   {
@@ -126,12 +126,21 @@
     {
      "data": {
       "text/plain": [
-       "5-element Vector{Int64}:\n",
+       "14-element Vector{Int64}:\n",
        " 1\n",
+       " 1\n",
+       " 1\n",
+       " 0\n",
+       " 0\n",
+       " 0\n",
+       " 0\n",
+       " 0\n",
+       " 0\n",
        " 0\n",
        " 1\n",
        " 0\n",
-       " 0"
+       " 0\n",
+       " 1"
       ]
      },
      "execution_count": 7,
@@ -140,27 +149,198 @@
     }
    ],
    "source": [
-    "digits(5, base=2, pad=5)"
+    "digits(9223, base=2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "daf0b232-4e8f-43e6-8393-bf95a6211f09",
+   "id": "4aa72314-3f51-4f2e-9dd3-99e0572d23a1",
    "metadata": {},
    "source": [
-    "These strings of bits, known as binary strings, can be used to represent more than just numbers. For example, there is a way to represent any text using bits. For any letter, number, or punctuation mark you want to use, you can find a corresponding string of at most eight bits using this table. Though these are quite arbitrary, this is a widely agreed-upon standard. In fact, it's what was used to transmit this article to you through the internet.\n",
+    "We can represent any information as binary strings, and in fact we do store and process information using this system.\n",
     "\n",
-    "This is how all information is represented in computers. Whether numbers, letters, images, or sound, it all exists in the form of binary strings.\n",
+    "For example, there is a way to represent any text using bits. For any letter, number, or punctuation mark you want to use, you can find a corresponding string of at most eight bits using this table. Though these are quite arbitrary, this is a widely agreed-upon standard. In fact, it's what was used to transmit this article to you through the internet.\n",
     "\n",
-    "Like our standard digital computers, quantum computers are based on this same basic idea. The main difference is that they use qubits, an extension of the bit to quantum mechanics. In the rest of this textbook, we will explore what qubits are, what they can do, and how they do it. In this section, however, we are not talking about quantum at all. So, we just use qubits as if they were bits.\n",
+    "but you might say: Duh!, I already know this, so what is so special about this?\n",
+    "\n",
+    "Like our standard digital computers, quantum computers are based on this same basic idea. The main difference is that they use qubits, an extension of the bit to quantum mechanics. \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09f0d6b4-5540-4733-a3e0-8cb9b33fd8f9",
+   "metadata": {},
+   "source": [
+    "## The Qubit\n",
+    "\n",
+    "A quantum bit or qubit is a two-level quantum mechanical system and is represented by quantum states. Any quantum particle that can be measured in two discrete states could be used as a qubit\n",
+    "\n",
+    "e.g:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0a88172-2d06-425e-a240-8f702fddfb32",
+   "metadata": {},
+   "source": [
+    "### Trapped ions\n",
+    "![Ions](https://qtech.fysik.su.se/images/ions/7ions.jpg)\n",
+    "\n",
+    "Who uses:\n",
+    "\n",
+    "[Quantinium](https://www.quantinuum.com/)\n",
+    "\n",
+    "[IonQ](https://ionq.com/)\n",
+    "\n",
+    "[QUANTUM FACTORY]()\n",
+    "\n",
+    "[ALPINE QUANTUM TECHNOLOGIES](https://www.aqt.eu/)\n",
+    "\n",
+    "[OXFORD IONICS](www.oxionics.com)\n",
+    "\n",
+    "[ELEQTRON](https://eleqtron.com/en/)\n",
+    "\n",
+    "[Honeywell](https://www.honeywell.com/us/en/company/quantum)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "692ebad0-0e03-4430-ad94-5b02c460f644",
+   "metadata": {},
+   "source": [
+    "### Polarized photons\n",
+    "\n",
+    "![photon](https://www.baumer.com/medias/sys_master/images-content/images-content/h98/hae/8940792119326/Grafik-Polarisation-2-EN.gif)\n",
+    "\n",
+    "Who uses:\n",
+    "\n",
+    "[Xanadu](https://www.xanadu.ai/)\n",
+    "\n",
+    "[ORCA Computing](https://www.orcacomputing.com/)\n",
+    "\n",
+    "[QUIX QUANTUM](https://www.quixquantum.com/)\n",
+    "\n",
+    "[PSIQUANTUM](https://psiquantum.com/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a733e58-b7b5-476d-b9ff-e03e9da9e347",
+   "metadata": {},
+   "source": [
+    "### Electrons spin currents\n",
+    "\n",
+    "![beast](https://www.ibm.com/blogs/research/wp-content/uploads/2020/01/QLA_figure1.jpg)\n",
+    "\n",
+    "Who uses:\n",
+    "\n",
+    "[IBM](https://www.ibm.com/blogs/research/2020/01/quantum-limited-amplifiers/)\n",
+    "\n",
+    "[Google](https://quantumai.google/)\n",
+    "\n",
+    "[Intel](https://www.intel.com/content/www/us/en/research/quantum-computing.html)\n",
+    "\n",
+    "[Rigetti](https://www.rigetti.com/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4840264a-2935-4480-a784-49e23ce290b8",
+   "metadata": {},
+   "source": [
+    "## The Qubit\n",
+    "\n",
+    "![superposition](https://gideonwolfe.com/img/quantum/superposition.gif)\n",
+    "\n",
+    "A qubit is analogous to a classical bit in a classical computing system. The basic difference between the two is that in a classical system, a bit can take up values of either 0 or 1 as opposed to a qubit, which can take up a whole set of values between $\\vert 0\\rangle$ and $\\vert 1\\rangle$ representing the superposition.\n",
+    "\n",
+    "The key idea for a quantum bit to work is that we need a quantum system that has a ground state $\\vert g \\rangle$ (lowest energy state) and an excited state $\\vert e \\rangle$ (higher energy state).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbcb6804-d35e-4909-bc67-cd1f97c58ae0",
+   "metadata": {},
+   "source": [
+    "## The State of Qubit\n",
+    "\n",
+    "![bloch](https://qiskit.org/textbook/ch-algorithms/images/zbasis-counting.gif)\n",
+    "\n",
+    "The state of a classical bit is a number (0 or 1), the state of a qubit is a vector in a two-dimensional vector space. This vector space is also known as $state$ $space$. The state of a quantum system is given by a vector $\\vert \\psi(t)\\rangle$ that contains all possible information about the system at any given time.\n",
+    "\n",
+    "The vector $\\vert \\psi(t)\\rangle$ is a member of the Hilbert Space $\\mathcal{H}$ (more on this later) and can be a time variable (i.e., may change with time). In quantum mechanics, it is typical to normalize the states (i.e., to find a way to set the inner product $\\langle \\psi\\vert \\psi \\langle = 1).\n",
     "\n"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "54739553-7703-4163-8733-03c7ec7bee9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×1 adjoint(::Matrix{Int64}) with eltype Int64:\n",
+       " 1\n",
+       " 0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "̄Zero_state = Int[1 0]'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e03595c8-ddba-4aae-a485-87bd748c77b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×1 adjoint(::Matrix{Int64}) with eltype Int64:\n",
+       " 0\n",
+       " 1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "One_state = Int[0 1]'"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "e2c299f1-cc9d-4c71-bac3-6d0a406977c3",
+   "id": "c66b71ae-292c-4b0a-90cd-b7cf58c62639",
    "metadata": {},
    "source": [
+    "## The Bloch sphere\n",
+    "\n",
+    "![Bloch2](https://miro.medium.com/max/360/0*5g0fQQEwCgaU31fu.gif)\n",
+    "\n",
+    "The Bloch sphere is a three-dimensional geometric representation of qubit state space as points on the surface of an imaginary unit sphere. This is one of two ways of representing a qubit. The other way represents the qubit in Dirac notation. Simply put, the Bloch representation takes the two-dimensional (2-D) graph representation and depicts it in a 3-D representation with the state of a qubit represented by a point on the sphere.\n",
+    "\n",
+    "$$ \\vert \\psi\\rangle = \\cos\\left(\\frac{\\theta}{2}\\right)\\vert 0\\rangle + e^{i\\phi}\\sin\\left(\\frac{\\theta}{2}\\right) \\vert 1\\rangle$$\n",
+    "\n",
+    "The angle $\\phi$ of the Bloch sphere is called the azimuthal angle (or phase angle) and measured from the positive X axis to the projection of state $\\vert \\psi \\rangle$ onto the X − Y plane. Angle $\\theta$ is called the polar angle and is measured from the positive Z axis to the Bloch vector representing the state $\\vert \\psi\\rangle$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "875d6e6c-6cc8-4bb0-83f4-be9ad84d82c5",
+   "metadata": {},
+   "source": [
+    "\n",
     "## 2. Computation as a diagram \n",
     "\n",
     "Whether we are using qubits or bits, we need to manipulate them in order to turn the inputs we have into the outputs we need. For the simplest programs with very few bits, it is useful to represent this process in a diagram known as a circuit diagram. These have inputs on the left, outputs on the right, and operations represented by arcane symbols in between. These operations are called 'gates', mostly for historical reasons.\n",
