--- a/Yao_QC_learning/LS_EDF_QC/learning and share/Intro.ipynb
+++ b/Yao_QC_learning/LS_EDF_QC/learning and share/Intro.ipynb
@@ -246,31 +246,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4840264a-2935-4480-a784-49e23ce290b8",
+   "id": "b22c4d53-8bea-4e0d-80f5-fb35a84e36c5",
    "metadata": {},
    "source": [
-    "## The Qubit\n",
+    "# Mathematical representation of qubits\n",
     "\n",
-    "![superposition](https://gideonwolfe.com/img/quantum/superposition.gif)\n",
-    "\n",
-    "A qubit is analogous to a classical bit in a classical computing system. The basic difference between the two is that in a classical system, a bit can take up values of either 0 or 1 as opposed to a qubit, which can take up a whole set of values between $\\vert 0\\rangle$ and $\\vert 1\\rangle$ representing the superposition.\n",
-    "\n",
-    "The key idea for a quantum bit to work is that we need a quantum system that has a ground state $\\vert g \\rangle$ (lowest energy state) and an excited state $\\vert e \\rangle$ (higher energy state).\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cbcb6804-d35e-4909-bc67-cd1f97c58ae0",
-   "metadata": {},
-   "source": [
-    "## The State of Qubit\n",
-    "\n",
-    "![bloch](https://qiskit.org/textbook/ch-algorithms/images/zbasis-counting.gif)\n",
-    "\n",
-    "The state of a classical bit is a number (0 or 1), the state of a qubit is a vector in a two-dimensional vector space. This vector space is also known as $state$ $space$. The state of a quantum system is given by a vector $\\vert \\psi(t)\\rangle$ that contains all possible information about the system at any given time.\n",
-    "\n",
-    "The vector $\\vert \\psi(t)\\rangle$ is a member of the Hilbert Space $\\mathcal{H}$ (more on this later) and can be a time variable (i.e., may change with time). In quantum mechanics, it is typical to normalize the states (i.e., to find a way to set the inner product $\\langle \\psi\\vert \\psi \\langle = 1).\n",
-    "\n"
+    "Under the hood, the mathematical framework of quantum computing is linear algebra. A qubit is represented by a state, which is a column vector of two elements. The two most basic ones are the analogues of a bit's \"0\" and \"1\" state, which are represented by the following two vectors:"
    ]
   },
   {
@@ -321,6 +302,182 @@
   },
   {
    "cell_type": "markdown",
+   "id": "905a1794-2908-424d-acbc-5dd58312f01d",
+   "metadata": {},
+   "source": [
+    "This is tedious to write, though, so in quantum computing (and more generally, in quantum mechanics) we use a type of shorthand notation called Dirac notation, or bra-ket notation. The state vector of a qubit is called a ket, the notation for which is . What goes in between the  and  is a label to denote particular state. The two states above, in bra-ket notation, are expressed like so:\n",
+    "\n",
+    "\\begin{align}\n",
+    "& \\vert 0\\rangle = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} \\ \\ \\ \\vert 1\\rangle = \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix}\n",
+    "\\end{align}\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30e9821b-f6a6-4600-a06f-848ce41f4119",
+   "metadata": {},
+   "source": [
+    "Quite often, we see the notation $\\vert \\psi \\rangle$ , which represents a qubit in some arbitrary state labelled by .\n",
+    "\n",
+    "Bra-ket notation gets its name for a reason: for every ket, there is an associated bra. A bra is like a ket turned on its side. It is a row vector, where each element in the vector is the complex conjugate of the corresponding element in the ket. (More formally, a bra is the conjugate transpose of a ket.) The notation for bras is the reverse of the notation for kets:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c3f67e81-2914-4502-bdaf-e205c1e950f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×2 Matrix{Int64}:\n",
+       " 1  0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Zero_dagger_state = Int[1 0]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a4e82ccd-1c16-4ec9-b743-aeb9c11e3976",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×2 Matrix{Int64}:\n",
+       " 0  1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "One_dagger_state = Int[0 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb373a77-76aa-4eb0-a623-313b5ece0102",
+   "metadata": {},
+   "source": [
+    "\\begin{align}\n",
+    "& \\langle 0\\vert = \\begin{bmatrix} 1 \\ \\ \\ 0 \\end{bmatrix} \\ \\ \\ \\langle 1 \\vert = \\begin{bmatrix} 0 \\ \\ \\ 1 \\end{bmatrix}\n",
+    "\\end{align}\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4e25ad7-8e1e-4cde-88d6-0a04c685f6a5",
+   "metadata": {},
+   "source": [
+    "hese two states, $\\vert 0\\rangle$  and $\\vert 1\\rangle$, are particularly important because they form a **basis**. In linear algebra, a basis is a set of vectors that spans a vector space; you can write anything else in that space as a linear combination of those basis vectors. Bases must consist of linearly independent vectors. A special case of this is when the basis vectors are orthogonal. Orthogonality can be checked by taking the inner product between two vectors, which is defined by the dot product. The same holds true for qubit states (with a bit of a twist).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7408cedf-20b7-4c3f-9891-6221eedbfc84",
+   "metadata": {},
+   "source": [
+    "The inner product between two qubit states is computed by taking the dot product between the bra of one, and the ket of the other (they combine to form a \"bra-ket\" expression). We can do so to check that $\\vert 0\\rangle$  and $\\vert 1\\rangle$ are orthogonal:\n",
+    "\n",
+    "\\begin{align}\n",
+    "& \\langle 0\\vert 1\\rangle = \\langle 1\\vert 0\\rangle = \\begin{bmatrix} 1 \\ \\ \\ 0 \\end{bmatrix} . \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix} \\\\\n",
+    "& 1 . 0 + 0 . 1 = 0\n",
+    "\\end{align}\n",
+    " \n",
+    "This is a special basis called the computational basis, and it is the most commonly-used basis in which to express quantum states."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8d6c29a-a4e8-453c-b4b1-c870d44a52f4",
+   "metadata": {},
+   "source": [
+    "Another feature of the computational basis is that its states are normalized to have length 1. You can compute the length of a qubit state vector just like you compute the length of a regular 2-dimensional vector; by computing its inner product with itself, and then taking the square root.Another feature of the computational basis is that its states are normalized to have length 1. You can compute the length of a qubit state vector just like you compute the length of a regular 2-dimensional vector; by computing its inner product with itself, and then taking the square root.\n",
+    "\n",
+    "\\begin{align}\n",
+    "& \\sqrt{\\langle 1\\vert 1\\rangle} = \\sqrt{\\begin{bmatrix} 0 \\ \\ \\ 1 \\end{bmatrix} . \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix}} \\\\\n",
+    "& \\sqrt{0 . 0 + 1 . 1} = 1\n",
+    "\\end{align}\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c0b564c-d4ad-4030-86b3-1cce38a9e7f8",
+   "metadata": {},
+   "source": [
+    "![uau](https://media.tenor.com/lc4BrNeVGnMAAAAC/uau-whoa.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4840264a-2935-4480-a784-49e23ce290b8",
+   "metadata": {},
+   "source": [
+    "## Superposition \n",
+    "\n",
+    "![superposition](https://gideonwolfe.com/img/quantum/superposition.gif)\n",
+    "\n",
+    "A qubit is analogous to a classical bit in a classical computing system. The basic difference between the two is that in a classical system, a bit can take up values of either 0 or 1 as opposed to a qubit, which can take up a whole set of values between $\\vert 0\\rangle$ and $\\vert 1\\rangle$ representing the superposition. Mathematically, the state of a qubit in superposition is a linear combination of the basis states,\n",
+    "\n",
+    "$$\\vert \\psi \\rangle = \\alpha\\vert 0\\rangle \\beta\\vert 1\\rangle = \\begin{bmatrix} \\alpha \\\\ \\beta \\end{bmatrix} $$\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "468f02d2-1015-46ee-a60c-8fe1ca705c0b",
+   "metadata": {},
+   "source": [
+    "where $\\alpha$ and $\\beta$ are complex numbers such that\n",
+    "\n",
+    "$$ \\alpha\\alpha^{\\dagger} + \\beta\\beta^{\\dagger} = 1$$\n",
+    "\n",
+    "These $\\alpha$ and $\\beta$ are called **amplitudes**, or **probability amplitudes**. The amplitudes carry information about the relative strength of $\\vert 0\\rangle$ and $\\vert 1\\rangle$ in the state.\n",
+    "\n",
+    "The key idea for a quantum bit to work is that we need a quantum system that has a ground state $\\vert g \\rangle$ (lowest energy state) and an excited state $\\vert e \\rangle$ (higher energy state).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70506ed1-b1e0-4eec-a97f-ad8d441706a4",
+   "metadata": {},
+   "source": [
+    "_____\n",
+    "Pro-tip. A common misconception is that a qubit in a superposition of two states is in both states at the same time. This is false; the qubit is only ever in one state. It's just that sometimes, that state may be a linear combination of the basis states.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbcb6804-d35e-4909-bc67-cd1f97c58ae0",
+   "metadata": {},
+   "source": [
+    "## The State of Qubit\n",
+    "\n",
+    "![bloch](https://qiskit.org/textbook/ch-algorithms/images/zbasis-counting.gif)\n",
+    "\n",
+    "The state of a classical bit is a number (0 or 1), the state of a qubit is a vector in a two-dimensional vector space. This vector space is also known as $state$ $space$. The state of a quantum system is given by a vector $\\vert \\psi(t)\\rangle$ that contains all possible information about the system at any given time.\n",
+    "\n",
+    "The vector $\\vert \\psi(t)\\rangle$ is a member of the Hilbert Space $\\mathcal{H}$ (more on this later) and can be a time variable (i.e., may change with time). In quantum mechanics, it is typical to normalize the states (i.e., to find a way to set the inner product $\\langle \\psi\\vert \\psi \\rangle = 1$).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c66b71ae-292c-4b0a-90cd-b7cf58c62639",
    "metadata": {},
    "source": [
@@ -334,6 +491,115 @@
     "\n",
     "The angle $\\phi$ of the Bloch sphere is called the azimuthal angle (or phase angle) and measured from the positive X axis to the projection of state $\\vert \\psi \\rangle$ onto the X − Y plane. Angle $\\theta$ is called the polar angle and is measured from the positive Z axis to the Bloch vector representing the state $\\vert \\psi\\rangle$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d2b0052-da56-40d3-89e5-2133aef523c5",
+   "metadata": {},
+   "source": [
+    "## Measurement outcome probabilities\n",
+    "\n",
+    "Creating qubit states and putting them in superposition happens at the beginning of an algorithm. In order to perform a meaningful quantum computation, we'll need a way to get information from the qubits at the end of an algorithm. That is, we need a way to measure qubits. Measurement in quantum computing is probabilistic. When we measure, we can't see whether a qubit is in a superposition, rather we observe the qubit either in state $\\vert 0\\rangle$ or $\\vert 1\\rangle$ state. The amplitudes $\\alpha$ and $\\beta$ contain the information about the probability of each of those outcomes:\n",
+    "\n",
+    "\n",
+    "\\begin{align}\n",
+    "& \\text{Prob}(\\text{measure and observe})\\vert 0 \\rangle = \\vert\\alpha\\vert^2 \\\\\n",
+    "& \\text{Prob}(\\text{measure and observe})\\vert 1 \\rangle = \\vert\\beta\\vert^2 \\\\\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "babdb422-0b26-47f4-abea-619cd06c4204",
+   "metadata": {},
+   "source": [
+    "Colloquially, we often refer to observing the qubit in state $\\vert 0\\rangle$ after measurement as a \"measurement outcome of 0\", and similarly for $\\vert 0\\rangle$. In other words, if we measure a  $\\vert 0\\rangle$ we can map that to a classical \"0\" and if we measure a $\\vert 1\\rangle$ we can map that to a classical \"1\". After measurement, the qubit itself remains in the observed state. This means we can't tell right away what some original state $\\vert\\psi\\rangle = \\alpha\\vert 0\\rangle + \\beta\\vert 1\\rangle$ might have been. Measurement has given us just a single bit of information, 0 or 1, that we associate with the corresponding outcome. In order to determine the full state, we must take many, many measurements in order to estimate the outcome probabilities, and $\\alpha$ thus $\\beta$ and ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55aa4f66-0970-4532-bdf6-12cfe94fc4f6",
+   "metadata": {},
+   "source": [
+    "## Observables and Operators\n",
+    "\n",
+    "In quantum computing, for any variable x that changes dynamically and can be measured physically as a quantity, there is a corresponding operator $\\mathcal{O}$ . The operator $\\mathcal{O}$ is Hermitian in nature.\n",
+    "\n",
+    "What a hell is an Hermitian operator?\n",
+    "\n",
+    "A: Hermitian operator is just a fancy physicist word for a self-dajoint operator.\n",
+    "\n",
+    "What a hell is a self-adjoint operator?\n",
+    "\n",
+    "Short answer -> is a matrix that is it owns transposed conjugate (obs. only works on the Hilbert space)\n",
+    "\n",
+    "e.g:\n",
+    "\\begin{align}\n",
+    "& \\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix} \\\\\n",
+    "& \\begin{bmatrix} 0 & -i \\\\ i & 0 \\end{bmatrix} \\\\ \n",
+    "& \\begin{bmatrix} 1 & 0 \\\\ 0 & -1 \\end{bmatrix} \\\\\n",
+    "\\end{align}\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dd9d778-4e23-46f5-8e90-e54dd8f976fd",
+   "metadata": {},
+   "source": [
+    "## The Hilbert Space\n",
+    "\n",
+    "As we saw before, the vector $$ \\vert \\psi\\rangle = \\cos\\left(\\frac{\\theta}{2}\\right)\\vert 0\\rangle + e^{i\\phi}\\sin\\left(\\frac{\\theta}{2}\\right) \\vert 1\\rangle$$, we can simplify this by writing $\\vert \\psi\\rangle = \\alpha \\vert 0\\rangle + \\beta \\vert 1\\rangle$.\n",
+    "\n",
+    "What about the case we have a system with two qubits?\n",
+    "\n",
+    "$$\\vert \\psi\\rangle = \\alpha_1 \\vert 00\\rangle + \\alpha_2 \\vert 01\\rangle + \\alpha_3 \\vert 10\\rangle + \\alpha_4 \\vert 11\\rangle$$\n",
+    "\n",
+    "and infinite qubits?\n",
+    "\n",
+    "$$\\vert \\psi\\rangle = \\sum_{i=0}^{2^{N}-1}\\alpha_{i}\\vert i\\rangle$$\n",
+    "\n",
+    "just remember that $\\alpha_i$ is a complex number, $\\sum_{i}\\vert \\alpha_i \\vert^2 = 1$ and $\\langle i \\vert i \\rangle = 1$ and you are good to go."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48247f30-b519-43ab-8623-a0c7d6d9bd52",
+   "metadata": {},
+   "source": [
+    "## The Hilbert Space\n",
+    "\n",
+    "This raises a small problema, if we discribe our vector space as an infinit sum of this smaller therms, as in $\\vert \\psi\\rangle = \\sum_{i=0}^{2^{N}-1}\\alpha_{i}\\vert i\\rangle$, we might ended up outsit of our space, and this is a big problem!!\n",
+    "\n",
+    "and you ask, how so? (and probably what?)\n",
+    "\n",
+    "just to show, we can do the same vector space of polynomials:\n",
+    "\n",
+    "$$ \\vec{P} = \\frac{1}{0!} * (x^0) + \\frac{1}{1!} * (x^1) + \\frac{1}{2!}* (x^2) + \\frac{1}{3!}* (x^3) \\dots$$\n",
+    "\n",
+    "wait a second, this is the Taylor expansion for $e^x$!!! and it is outside of the polynomial space!!!\n",
+    "\n",
+    "In order to avoid the same problem with our quantum system, we enforce that the sum of the elements of the vector space converges to an element inside the vector space, i.e. has an inner product that is Cauchy complete. And this is a Hilbert space!!!, The Hilbert space  consists of a set of vectors ψ, ϕ, φ... and a set of scalars such as\n",
+    "a, b, c, . . , which exhibit and follow the four properties.\n",
+    "\n",
+    "Ok, was this information usefull? maybe, probably not. But was cool to know."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "730a2523-564e-4671-b7bb-54b3505c8a43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f6d0664-f900-45e8-b4e4-07e97a0f9b47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
