--- a/Yao_QC_learning/LS_EDF_QC/learning and share/Intro.ipynb
+++ b/Yao_QC_learning/LS_EDF_QC/learning and share/Intro.ipynb
@@ -2670,12 +2670,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "dd22624b-56bf-45ca-986d-0a38cadf6eda",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "d7a0b1e1-1bff-44dd-8cea-9e787de0edae",
@@ -2741,6 +2735,344 @@
    ],
    "source": [
     "1/sqrt(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd22624b-56bf-45ca-986d-0a38cadf6eda",
+   "metadata": {},
+   "source": [
+    "## It's just a phase\n",
+    "\n",
+    "Both the $X$ and the $H$ gate we previously saw affected which basis states appeared in the superposition. We know how to flip the states using $X$, and how to create uniform superpositions. But, how can we change the amplitudes more generally? How do we change their relative magnitudes? In this section, we will learn about operations that change the phase of the amplitudes of a superposition.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddcac621-1e59-438a-a0e6-02b2a887c588",
+   "metadata": {},
+   "source": [
+    "## Global and relative phases\n",
+    "\n",
+    "Let's consider an arbitrary quantum state\n",
+    "\n",
+    "$$ \\vert\\psi\\rangle = \\alpha\\vert 0 \\rangle + \\beta\\vert 1\\rangle$$\n",
+    "\n",
+    "and separate out the real and complex components of the amplitudes by writing them in polar form, i.e., $\\alpha = ae^{i\\gamma}$ ,$\\beta = be^{i\\phi}$ . We can factor out the complex part:\n",
+    "\n",
+    "$$ \\vert\\psi\\rangle = ae^{i\\gamma}\\vert 0 \\rangle + be^{i\\phi}\\vert 1\\rangle = e^{i\\gamma}(a\\vert 0\\rangle + be^{i(\\phi -\\gamma)}\\vert 1\\rangle)$$\n",
+    "\n",
+    "Notice how the term $e^{i\\gamma}$ out front doesn't affect the measurement outcome probabilities at all! Without loss of generality, we can totally ignore this **global phas**e, and describe exactly the same quantum state:\n",
+    "\n",
+    "$$\\vert \\psi \\rangle = a\\vert 0\\rangle + be^{i(\\phi -\\gamma)}\\vert 1\\rangle = a\\vert 0\\rangle + be^{i\\phi}\\vert 1\\rangle$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bd36cbb-4ce8-40e5-9fdd-587a32799b1e",
+   "metadata": {},
+   "source": [
+    "This remaining complex value, $e^{i\\phi}$ is known as a **relative phase**. If you look at the measurement outcome probabilities of $\\vert 0\\rangle$ and $\\vert 1\\rangle$, you might notice that this phase doesn't affect them either; we will learn later, though, that it can affect the measurement outcomes if the measurements are performed in a different way.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efef7676-98db-4621-84b2-b3f22f58d848",
+   "metadata": {},
+   "source": [
+    "## Z rotations\n",
+    "\n",
+    "The $RZ$ gate, or \"$Z$ rotation\" is a quantum gate that modifies the relative phase between $\\vert 0 \\rangle$ and $\\vert 1 \\rangle$. Given some initial state $\\vert\\psi\\rangle = \\alpha\\vert 0\\rangle + \\beta\\vert 1\\rangle$, a  rotation by the amount  (an angle in radians) is\n",
+    "\n",
+    "$$RZ(\\omega)\\vert \\psi\\rangle = \\alpha \\vert 0\\rangle + \\beta e^{i\\omega} \\vert 1\\rangle$$\n",
+    "\n",
+    "The matrix representation of $RZ$ is a bit counter-intuitive at first:\n",
+    "\n",
+    "\\begin{align}\n",
+    "& RZ(\\omega) = \\begin{bmatrix} e^{\\frac{-i\\omega}{2}} & 0 \\\\ 0 & e^{\\frac{\\omega}{2}} \\end{bmatrix} \\\\\n",
+    "\\end{align}\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8ecb6ca5-9035-4043-ab09-848e3fec5ef8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"153pt\" height=\"45pt\" viewBox=\"0 0 153 45\" version=\"1.1\">\n",
+       "<defs>\n",
+       "<g>\n",
+       "<symbol overflow=\"visible\" id=\"glyph-1992470-0\">\n",
+       "<path style=\"stroke:none;\" d=\"M 0.515625 1.765625 L 0.515625 -7.046875 L 5.515625 -7.046875 L 5.515625 1.765625 Z M 1.0625 1.21875 L 4.953125 1.21875 L 4.953125 -6.484375 L 1.0625 -6.484375 Z M 1.0625 1.21875 \"/>\n",
+       "</symbol>\n",
+       "<symbol overflow=\"visible\" id=\"glyph-1992470-1\">\n",
+       "<path style=\"stroke:none;\" d=\"M 3.71875 -3.4375 C 3.96875 -3.375 4.179688 -3.25 4.359375 -3.0625 C 4.535156 -2.882812 4.757812 -2.53125 5.03125 -2 L 6.015625 0 L 4.96875 0 L 4.09375 -1.84375 C 3.84375 -2.363281 3.613281 -2.695312 3.40625 -2.84375 C 3.207031 -3 2.945312 -3.078125 2.625 -3.078125 L 1.6875 -3.078125 L 1.6875 0 L 0.703125 0 L 0.703125 -7.296875 L 2.734375 -7.296875 C 3.535156 -7.296875 4.144531 -7.113281 4.5625 -6.75 C 4.988281 -6.382812 5.203125 -5.863281 5.203125 -5.1875 C 5.203125 -4.695312 5.070312 -4.300781 4.8125 -4 C 4.550781 -3.695312 4.1875 -3.507812 3.71875 -3.4375 Z M 1.6875 -6.484375 L 1.6875 -3.890625 L 2.765625 -3.890625 C 3.242188 -3.890625 3.597656 -3.992188 3.828125 -4.203125 C 4.054688 -4.421875 4.171875 -4.75 4.171875 -5.1875 C 4.171875 -5.601562 4.046875 -5.921875 3.796875 -6.140625 C 3.554688 -6.367188 3.203125 -6.484375 2.734375 -6.484375 Z M 1.6875 -6.484375 \"/>\n",
+       "</symbol>\n",
+       "<symbol overflow=\"visible\" id=\"glyph-1992470-2\">\n",
+       "<path style=\"stroke:none;\" d=\"M 1.109375 -5.484375 L 5.078125 -5.484375 L 5.078125 -4.65625 L 1.9375 -0.734375 L 5.078125 -0.734375 L 5.078125 0 L 0.984375 0 L 0.984375 -0.828125 L 4.125 -4.765625 L 1.109375 -4.765625 Z M 1.109375 -5.484375 \"/>\n",
+       "</symbol>\n",
+       "<symbol overflow=\"visible\" id=\"glyph-1992470-3\">\n",
+       "<path style=\"stroke:none;\" d=\"M 4.328125 -7.59375 C 3.890625 -6.84375 3.5625 -6.097656 3.34375 -5.359375 C 3.132812 -4.628906 3.03125 -3.890625 3.03125 -3.140625 C 3.03125 -2.390625 3.132812 -1.644531 3.34375 -0.90625 C 3.5625 -0.164062 3.890625 0.570312 4.328125 1.3125 L 3.546875 1.3125 C 3.046875 0.539062 2.675781 -0.207031 2.4375 -0.9375 C 2.195312 -1.675781 2.078125 -2.410156 2.078125 -3.140625 C 2.078125 -3.867188 2.195312 -4.597656 2.4375 -5.328125 C 2.675781 -6.066406 3.046875 -6.820312 3.546875 -7.59375 Z M 4.328125 -7.59375 \"/>\n",
+       "</symbol>\n",
+       "<symbol overflow=\"visible\" id=\"glyph-1992470-4\">\n",
+       "<path style=\"stroke:none;\" d=\"M 2.359375 -3.65625 C 2.359375 -3.84375 2.421875 -4 2.546875 -4.125 C 2.671875 -4.257812 2.820312 -4.328125 3 -4.328125 C 3.175781 -4.328125 3.328125 -4.257812 3.453125 -4.125 C 3.585938 -4 3.65625 -3.84375 3.65625 -3.65625 C 3.65625 -3.476562 3.59375 -3.328125 3.46875 -3.203125 C 3.34375 -3.078125 3.1875 -3.015625 3 -3.015625 C 2.8125 -3.015625 2.65625 -3.070312 2.53125 -3.1875 C 2.414062 -3.3125 2.359375 -3.46875 2.359375 -3.65625 Z M 3.015625 -6.640625 C 2.546875 -6.640625 2.195312 -6.390625 1.96875 -5.890625 C 1.75 -5.398438 1.640625 -4.648438 1.640625 -3.640625 C 1.640625 -2.628906 1.75 -1.875 1.96875 -1.375 C 2.195312 -0.882812 2.546875 -0.640625 3.015625 -0.640625 C 3.472656 -0.640625 3.8125 -0.882812 4.03125 -1.375 C 4.257812 -1.875 4.375 -2.628906 4.375 -3.640625 C 4.375 -4.648438 4.257812 -5.398438 4.03125 -5.890625 C 3.8125 -6.390625 3.472656 -6.640625 3.015625 -6.640625 Z M 3.015625 -7.421875 C 3.785156 -7.421875 4.367188 -7.101562 4.765625 -6.46875 C 5.171875 -5.832031 5.375 -4.890625 5.375 -3.640625 C 5.375 -2.390625 5.171875 -1.445312 4.765625 -0.8125 C 4.367188 -0.175781 3.785156 0.140625 3.015625 0.140625 C 2.234375 0.140625 1.644531 -0.175781 1.25 -0.8125 C 0.851562 -1.445312 0.65625 -2.390625 0.65625 -3.640625 C 0.65625 -4.890625 0.851562 -5.832031 1.25 -6.46875 C 1.644531 -7.101562 2.234375 -7.421875 3.015625 -7.421875 Z M 3.015625 -7.421875 \"/>\n",
+       "</symbol>\n",
+       "<symbol overflow=\"visible\" id=\"glyph-1992470-5\">\n",
+       "<path style=\"stroke:none;\" d=\"M 2.390625 -1.484375 L 3.625 -1.484375 L 3.625 0 L 2.390625 0 Z M 2.390625 -1.484375 \"/>\n",
+       "</symbol>\n",
+       "<symbol overflow=\"visible\" id=\"glyph-1992470-6\">\n",
+       "<path style=\"stroke:none;\" d=\"M 1.3125 -0.828125 L 2.859375 -0.828125 L 2.859375 -6.40625 L 1.203125 -6.03125 L 1.203125 -6.921875 L 2.84375 -7.296875 L 3.828125 -7.296875 L 3.828125 -0.828125 L 5.34375 -0.828125 L 5.34375 0 L 1.3125 0 Z M 1.3125 -0.828125 \"/>\n",
+       "</symbol>\n",
+       "<symbol overflow=\"visible\" id=\"glyph-1992470-7\">\n",
+       "<path style=\"stroke:none;\" d=\"M 1.703125 -7.59375 L 2.484375 -7.59375 C 2.972656 -6.820312 3.335938 -6.066406 3.578125 -5.328125 C 3.816406 -4.597656 3.9375 -3.867188 3.9375 -3.140625 C 3.9375 -2.410156 3.816406 -1.675781 3.578125 -0.9375 C 3.335938 -0.195312 2.972656 0.550781 2.484375 1.3125 L 1.703125 1.3125 C 2.128906 0.5625 2.445312 -0.179688 2.65625 -0.921875 C 2.875 -1.660156 2.984375 -2.398438 2.984375 -3.140625 C 2.984375 -3.878906 2.875 -4.617188 2.65625 -5.359375 C 2.445312 -6.097656 2.128906 -6.84375 1.703125 -7.59375 Z M 1.703125 -7.59375 \"/>\n",
+       "</symbol>\n",
+       "</g>\n",
+       "</defs>\n",
+       "<g id=\"surface17\">\n",
+       "<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 50.816406 34.5 L 50.816406 10.5 L 102.183594 10.5 L 102.183594 34.5 Z M 50.816406 34.5 \"/>\n",
+       "<g style=\"fill:rgb(0%,0%,0%);fill-opacity:1;\">\n",
+       "  <use xlink:href=\"#glyph-1992470-1\" x=\"55.428223\" y=\"26.293945\"/>\n",
+       "  <use xlink:href=\"#glyph-1992470-2\" x=\"61.44873\" y=\"26.293945\"/>\n",
+       "  <use xlink:href=\"#glyph-1992470-3\" x=\"67.469238\" y=\"26.293945\"/>\n",
+       "  <use xlink:href=\"#glyph-1992470-4\" x=\"73.489746\" y=\"26.293945\"/>\n",
+       "  <use xlink:href=\"#glyph-1992470-5\" x=\"79.510254\" y=\"26.293945\"/>\n",
+       "  <use xlink:href=\"#glyph-1992470-6\" x=\"85.530762\" y=\"26.293945\"/>\n",
+       "  <use xlink:href=\"#glyph-1992470-7\" x=\"91.55127\" y=\"26.293945\"/>\n",
+       "</g>\n",
+       "<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 25.5 22.5 L 50.816406 22.5 \"/>\n",
+       "<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 102.183594 22.5 L 127.5 22.5 \"/>\n",
+       "<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 127.5 22.5 L 127.5 22.5 \"/>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": []
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RZ_qc = chain(1, put(1 => Rz(0.1)))\n",
+    "plot(RZ_qc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4039e807-0700-409b-8e2d-6b88b5080278",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ArrayReg{2, ComplexF64, Array...}\n",
+       "    active qubits: 1/1\n",
+       "    nlevel: 2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q0 = ArrayReg(bit\"0\")\n",
+    "st = q0 |> RZ_qc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "66358154-f230-48cb-bdb1-df1ab55705ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×1 Matrix{ComplexF64}:\n",
+       " 0.9987502603949663 - 0.04997916927067833im\n",
+       "                0.0 + 0.0im"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state(st)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47e842cb-8412-40c1-8c47-47ae0554fbdd",
+   "metadata": {},
+   "source": [
+    "# Z, S, and T\n",
+    "There are three special cases of $RZ$ that correspond to very commonly-used quantum gates: $Z$, $S$, and $T$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5619137b-c370-4287-bd63-b7df6cc3d1c6",
+   "metadata": {},
+   "source": [
+    "The case where $\\omega = \\pi$ is known as a Pauli $Z$ operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9c825eeb-6a31-4dbb-97e0-67287e171157",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rot(Z, π)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Zgate = Rz(π)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d61f0b16-f19a-4c8c-9623-06dcad0370d4",
+   "metadata": {},
+   "source": [
+    "Another well-known case is $\\omega = \\pi/2$. This gate is known colloquially as the phase gate and is denoted by $S$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "22cce95e-89ca-4d97-8d1c-b482d3552d3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rot(Z, 1.5707963267948966)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sgate = Rz(π/2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35ebfba6-d1d3-4778-811d-96ff9da78f2e",
+   "metadata": {},
+   "source": [
+    "the S-gate is not its own inverse! As a result, you will often see the S†-gate, (also “S-dagger”, “Sdg” or $S^{\\dagger}$-gate). The $S^{\\dagger}$-gate is clearly an RZ-gate with $\\omega = -\\pi/2$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "211ec4cf-aa79-4748-b0bd-6269faf5aa3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rot(X, -1.5707963267948966)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sdagger_gate = Rx(-π/2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a34a130-18e0-49e2-9c8d-9dceb7134c05",
+   "metadata": {},
+   "source": [
+    "Finally, the case where $\\omega = \\pi/4$ is known as the $T$ gate. The $T$ gate is sometimes referred to as the \"pi over 8 gate\" due to how its matrix representation looks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f6c8be3-d5e4-459b-86fe-b1c4f99fa2db",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\\begin{align}\n",
+    "& RZ(\\pi/4) = \\begin{bmatrix} e^{\\frac{-i\\pi}{8}} & 0 \\\\ 0 & e^{\\frac{i\\pi}{8}} \\end{bmatrix} \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "The T-gate is sometimes also known as the $\\sqrt[4]{Z}$-gate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "29fa1f9e-1ec6-49db-88ee-c8c92b402029",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rot(Z, 0.7853981633974483)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Tgate = Rz(π/4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b0e6224-f278-4525-ab53-649d4988a082",
+   "metadata": {},
+   "source": [
+    "## Remember the Bloch sphere?\n",
+    "\n",
+    "![Bloch2](https://logosconcarne.files.wordpress.com/2021/03/bloch-sphere.png)\n",
+    "\n",
+    "$$ \\vert \\psi\\rangle = \\cos\\left(\\frac{\\theta}{2}\\right)\\vert 0\\rangle + e^{i\\phi}\\sin\\left(\\frac{\\theta}{2}\\right) \\vert 1\\rangle$$\n",
+    "\n",
+    "There are the usual three axes: $x$, $y$, and $z$. Along the $z$ axis, the top-most state corresponds to $\\vert 0\\rangle$, and the bottom to $\\vert 1\\rangle$; these are the eigenvectors of the Pauli $Z$ operator. Similarly, along the $x$ axis are the $\\vert +\\rangle$  and $\\vert -\\rangle$  states, which are the eigenvectors of the Pauli $X$ operator. \n",
+    "\n",
+    "$RX$, $RY$, and $RZ$ rotate the qubit's state vector about the appropriate axis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ed8f93d-897d-4fd9-a7c4-7e0a2ed87ab6",
+   "metadata": {},
+   "source": [
+    "## RX and RY\n",
+    "\n",
+    "Now that we have some intuition about what these rotations are, we can begin to express $RX$ and $RY$ in terms of matrices and describe how they act on the basis states.\n",
+    "\n",
+    "The matrix representation of an $X$ rotation is"
    ]
   },
   {
